--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="unit xs-1 s-1 m-1-3 l-1-3">
       <h1>Solar System</h1>
     </div>
-    <nav clas="unit xs-1 s-1 m-2-3 l-2-3">
+    <nav class="unit xs-1 s-1 m-2-3 l-2-3">
       <ul>
         <li><a class="current">Planets</a></li>
         <li><a>Moon</a></li>
