--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
 
   <header class="grid grid-middle">
-    <div class="unit xs-1 s-1 m-1-3 l-1-3">
-      <h1>Solar System</h1>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 unit-content-center-vertical">
+      <h1 class="push-0">Solar System</h1>
     </div>
-    <nav class="unit xs-1 s-1 m-2-3 l-2-3">
+    <nav class="unit xs-1 s-1 m-2-3 l-2-3 unit-content-center-vertical grid-stretch">
       <ul>
-        <li><a class="current">Planets</a></li>
+        <li><a class="current focus">Planets</a></li>
         <li><a>Moon</a></li>
         <li><a>Exploration</a></li>
       </ul>
