This commit is for text and the main.css file

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
   <header class="grid grid-middle">
     <div class="unit xs-1 s-1 m-1-3 l-1-3 unit-content-center-vertical">
-      <h1 class="push-0">Solar System</h1>
+      <h1 class="push-0 peta">Solar System</h1>
     </div>
     <nav class="unit xs-1 s-1 m-2-3 l-2-3 unit-content-center-vertical grid-stretch">
       <ul>
-        <li><a class="current focus">Planets</a></li>
-        <li><a>Moon</a></li>
-        <li><a>Exploration</a></li>
+        <li class="mega"><a href="#" class="current focus">Planets</a></li>
+        <li class="mega"><a href="#">Moon</a></li>
+        <li class="mega"><a href="#">Exploration</a></li>
       </ul>
     </nav>
   </header>
